--- a/minisearch/minisearch_rs/Cargo.toml
+++ b/minisearch/minisearch_rs/Cargo.toml
@@ -14,3 +14,5 @@ nohash-hasher = "0.2.0"
 ulid = "1.2.1"
 unicode-segmentation = "1.12.0"
 hashbrown = "0.16.0"
+chumsky = "0.11.1"
+lz4_flex = "0.12.0"
