--- a/minisearch/Cargo.toml
+++ b/minisearch/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "minisearch_rs"
+name = "minisearch"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "minisearch_rs"
+name = "minisearch"
 crate-type = ["cdylib"]
 
 [dependencies]
@@ -17,3 +17,5 @@ hashbrown = "0.16.0"
 chumsky = "0.11.1"
 lz4_flex = "0.12.0"
 bincode = "2.0.1"
+thiserror = "2.0.17"
+memmap2 = "0.9.9"
