--- a/minisearch/pyproject.toml
+++ b/minisearch/pyproject.toml
@@ -12,4 +12,6 @@ classifiers = [
 ]
 dynamic = ["version"]
 [tool.maturin]
+python-source = "python"
+module-name = "minisearch.rust"
 features = ["pyo3/extension-module"]
