--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,16 +53,13 @@ jobs:
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Install test dependencies
-        run: python -m pip install --upgrade pip pytest pytest-subtests
+        run: python -m pip install --upgrade pip && python -m pip install -r .github/workflows/requirements.txt
       - name: Install wheel
-        run: python -m pip install dist/*.whl
+        if: matrix.platform.target == 'x86_64'
+        run: python .github/workflows/install_wheel.py dist
       - name: Run tests
+        if: matrix.platform.target == 'x86_64'
         run: python -m pytest -v tests/test_search.py
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-linux-${{ matrix.platform.target }}
-          path: dist
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
@@ -87,16 +84,11 @@ jobs:
           working-directory: minisearch
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Install test dependencies
-        run: python -m pip install --upgrade pip pytest pytest-subtests
+        run: python -m pip install --upgrade pip && python -m pip install -r .github/workflows/requirements.txt
       - name: Install wheel
-        run: python -m pip install dist/*.whl
+        run: python .github/workflows/install_wheel.py dist
       - name: Run tests
         run: python -m pytest -v tests/test_search.py
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-windows-${{ matrix.platform.target }}
-          path: dist
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
@@ -118,13 +110,8 @@ jobs:
           working-directory: minisearch
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Install test dependencies
-        run: python -m pip install --upgrade pip pytest pytest-subtests
+        run: python -m pip install --upgrade pip && python -m pip install -r .github/workflows/requirements.txt
       - name: Install wheel
-        run: python -m pip install dist/*.whl
+        run: python .github/workflows/install_wheel.py dist
       - name: Run tests
         run: python -m pytest -v tests/test_search.py
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-macos-${{ matrix.platform.target }}
-          path: dist
